--- a/templates/OSLO-Omgevingsvergunning-ap.j2
+++ b/templates/OSLO-Omgevingsvergunning-ap.j2
@@ -1,9 +1,12 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Vul hier een samenvatting van mijn applicatieprofiel in.</p>
-{% endblock %}
-
-{% block status %}
-<p>(Verwijder dit blok om een geautomatiseerde standaardparagraaf te laten verschijnen.)</p>
+<p>Deze specificatie definieert een gemeenschappelijk en expliciet begrippenkader over de uit te wisselen data in het kader van: 
+vergunningsplichtige activiteiten, 
+de aanvraag van een vergunning, 
+de procedure ter behandeling van een aanvraag, 
+de bepaling van de vergunde toestand op een bepaald moment in de tijd en 
+andere relevante procedures binnen de context van omgevingsvergunningen, zoals meldingen en beroepsprocedures. 
+Het profiel is ontwikkeld om informatie over omgevingsvergunningen en de achterliggende procedures eenduidig te kunnen uitwisselen tussen de verschillende betrokken partijen. Het vormt ook een basis informatiemodel dat ontwikkelaars van software die het omgevingsvergunningendomein ondersteunen verder kunnen uitbreiden naar een fysiek datamodel.
+</p>
 {% endblock %}
