Prepares for publication

--- a/templates/omgevingsvergunning-ap.j2
+++ b/templates/omgevingsvergunning-ap.j2
@@ -1,12 +1,11 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Deze specificatie definieert een gemeenschappelijk en expliciet begrippenkader over de uit te wisselen data in het kader van: 
-vergunningsplichtige activiteiten, 
-de aanvraag van een vergunning, 
-de procedure ter behandeling van een aanvraag, 
-de bepaling van de vergunde toestand op een bepaald moment in de tijd en 
-andere relevante procedures binnen de context van omgevingsvergunningen, zoals meldingen en beroepsprocedures. 
-Het profiel is ontwikkeld om informatie over omgevingsvergunningen en de achterliggende procedures eenduidig te kunnen uitwisselen tussen de verschillende betrokken partijen. Het vormt ook een basis informatiemodel dat ontwikkelaars van software die het omgevingsvergunningendomein ondersteunen verder kunnen uitbreiden naar een fysiek datamodel.
-</p>
+<p>Het applicatieprofiel Omgevingsvergunning biedt een gestandaardiseerd kernbegrippenkader voor het omgevingsvergunningendomein. Het applicatieprofiel moet de uitwisseling en koppeling (interoperabiliteit) van vergunningsinformatie bevorderen, en bijdragen tot een eenduidig gemeenschappelijk begrip en het voorkomen van misverstand en miscommunicatie tussen belanghebbenden, waaronder een verscheidenheid aan overheidsinstanties én het bredere publiek.</p>
+ 
+<p>Het applicatieprofiel is zeker niet allesomvattend, in de zin dat het niet heel het domein tot in detail vat.</p>
+ 
+<p>Het applicatieprofiel focust voornamelijk op de juridisch-inhoudelijke kern: de “ruggengraat” van het omgevingsvergunningenbeleid, zogezegd. Kort samengevat zijn dat de rechtshandelingen en rechtsfeiten die de vergunde toestand voortbrengen en doen evolueren, hun juridisch-inhoudelijke betekenis ten aanzien van handelingen en activiteiten die onder het omgevingsvergunningenbeleid gereguleerd zijn, en de verschillende kwalitatieve en ruimtelijk-temporale dimensies die de voornaamste aanknopingspunten vormen voor bevraging en koppeling.</p>
+ 
+<p>Het applicatieprofiel laat daarbij de nodige ruimte voor ad-hoc uitbreiding, combinatie met andere vocabularia, en eventuele verdere, meer toegespitste standaardisatie in de toekomst.</p>
 {% endblock %}
