--- a/templates/omgevingsvergunning-voc.j2
+++ b/templates/omgevingsvergunning-voc.j2
@@ -1,7 +1,13 @@
 {% extends "voc2.j2" %}
 
 {% block summary %}
-<p>Het vocabularium Omgevingsvergunning definieert termen die toelaten om data over omgevingsvergunningen uit te wisselen.</p>
+<p>Het vocabularium Omgevingsvergunning biedt een gestandaardiseerd kernbegrippenkader voor het omgevingsvergunningendomein. Het vocabularium moet de uitwisseling en koppeling (interoperabiliteit) van vergunningsinformatie bevorderen, en bijdragen tot een eenduidig gemeenschappelijk begrip en het voorkomen van misverstand en miscommunicatie tussen belanghebbenden, waaronder een verscheidenheid aan overheidsinstanties én het bredere publiek.</p>
+ 
+<p>Het vocabularium is zeker niet allesomvattend, in de zin dat het niet heel het domein tot in detail vat.</p>
+ 
+<p>Het vocabularium focust voornamelijk op de juridisch-inhoudelijke kern: de “ruggengraat” van het omgevingsvergunningenbeleid, zogezegd. Kort samengevat zijn dat de rechtshandelingen en rechtsfeiten die de vergunde toestand voortbrengen en doen evolueren, hun juridisch-inhoudelijke betekenis ten aanzien van handelingen en activiteiten die onder het omgevingsvergunningenbeleid gereguleerd zijn, en de verschillende kwalitatieve en ruimtelijk-temporale dimensies die de voornaamste aanknopingspunten vormen voor bevraging en koppeling.</p>
+ 
+<p>Het vocabularium laat daarbij de nodige ruimte voor ad-hoc uitbreiding, combinatie met andere vocabularia, en eventuele verdere, meer toegespitste standaardisatie in de toekomst.</p>
 {% endblock %}
 
 {% block license %}
