Updates inleidende tekst ap

--- a/templates/omgevingsvergunning-ap.j2
+++ b/templates/omgevingsvergunning-ap.j2
@@ -1,11 +1,13 @@
 {% extends "ap2.j2" %}
 
 {% block summary %}
-<p>Het applicatieprofiel Omgevingsvergunning biedt een gestandaardiseerd kernbegrippenkader voor het omgevingsvergunningendomein. Het applicatieprofiel moet de uitwisseling en koppeling (interoperabiliteit) van vergunningsinformatie bevorderen, en bijdragen tot een eenduidig gemeenschappelijk begrip en het voorkomen van misverstand en miscommunicatie tussen belanghebbenden, waaronder een verscheidenheid aan overheidsinstanties én het bredere publiek.</p>
+<p>Het applicatieprofiel Omgevingsvergunning bouwt voort op het vocabularium Omgevingsvergunning. Het vocabularium vormt een gestandaardiseerd kernbegrippenkader voor het omgevingsvergunningendomein, het applicatieprofiel legt de voornaamste verbanden vast tussen deze begrippen.</p>
  
-<p>Het applicatieprofiel is zeker niet allesomvattend, in de zin dat het niet heel het domein tot in detail vat.</p>
+<p>Samen met het vocabularium moet dit applicatieprofiel de uitwisseling en koppeling (interoperabiliteit) van vergunningsinformatie bevorderen, en bijdragen tot een eenduidig gemeenschappelijk begrip en het voorkomen van misverstand en miscommunicatie tussen belanghebbenden, waaronder een verscheidenheid aan overheidsinstanties én het bredere publiek.</p>
  
-<p>Het applicatieprofiel focust voornamelijk op de juridisch-inhoudelijke kern: de “ruggengraat” van het omgevingsvergunningenbeleid, zogezegd. Kort samengevat zijn dat de rechtshandelingen en rechtsfeiten die de vergunde toestand voortbrengen en doen evolueren, hun juridisch-inhoudelijke betekenis ten aanzien van handelingen en activiteiten die onder het omgevingsvergunningenbeleid gereguleerd zijn, en de verschillende kwalitatieve en ruimtelijk-temporale dimensies die de voornaamste aanknopingspunten vormen voor bevraging en koppeling.</p>
+<p>Het vocabularium en het applicatieprofiel vatten de juridisch-inhoudelijke kern die de “ruggengraat” van het omgevingsvergunningenbeleid vormt. Kort samengevat zijn dat de rechtshandelingen en rechtsfeiten die de vergunde toestand voortbrengen en doen evolueren, hun juridisch-inhoudelijke betekenis ten aanzien van handelingen en activiteiten die onder het omgevingsvergunningenbeleid gereguleerd zijn, en de verschillende kwalitatieve en ruimtelijk-temporale dimensies die de voornaamste aanknopingspunten vormen voor bevraging en koppeling.</p>
  
-<p>Het applicatieprofiel laat daarbij de nodige ruimte voor ad-hoc uitbreiding, combinatie met andere vocabularia, en eventuele verdere, meer toegespitste standaardisatie in de toekomst.</p>
+<p>Het vocabularium en het applicatieprofiel laten daarbij de nodige ruimte voor ad-hoc uitbreiding, combinatie met andere vocabularia, en eventuele verdere, meer toegespitste standaardisatie in de toekomst.</p>
+ 
+<p>Het applicatieprofiel is niet op één specifieke toepassing of use case gericht maar is eerder algemeen van aard: het bevat enkel verbanden die inherent zijn aan de betekenis van de opgenomen begrippen.<p>
 {% endblock %}
